sample-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: sample-ds
  labels:
    app: sample-ds
spec:
  selector:
    matchLabels:
      app: sample-ds
  template:
    metadata:
      labels:
        app: sample-ds
    spec:
      containers:
        - name: nginx-container
          image: nginx
