sample-entrypoint.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-entrypoint
spec:
  containers:
    - name: nginx-container-112
      image: nginx
      command: ["/bin/sleep"]
      args: ["3600"]
