sample-hostnetwork.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-hostnetwork
spec:
  hostNetwork: true
  containers:
    - name: sample-pod
      image: nginx:1.1.6
