sample-en.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-en
  namespace: default
spec:
  type: ExternalName
  externalName: external.example.com
