sample-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-headless
spec:
  selector:
    app: sample-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  clusterIP: None
  type: ClusterIP
