sample-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-lb
spec:
  selector:
    app: sample-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30082
  type: LoadBalancer
