sample-ns.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-none-selector
spec:
  selector:
    app: sample-none-selector
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: sample-none-selector
subsets:
  - addresses:
      - ip: 192.168.1.1
      - ip: 192.168.1.2
    ports:
      - port: 80
        protocol: TCP
